added more jquery and html

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,3 +57,15 @@ body {
 #first-text {
   display: none;
 }
+#fleek-message {
+  display: none;
+}
+#philosophy-message {
+  display: none;
+}
+#movie-message {
+  display: none;
+}
+#music-message {
+  display: none;
+}
